--- a/style/style.css
+++ b/style/style.css
@@ -30,3 +30,130 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.container {
+    width: 1039px;
+    height: 695px;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 20px;
+}
+
+.right {
+    width: 40%;
+    border-radius: 0 20px 20px 0;
+    background: var(--main-gradient);
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.right h2 {
+    color: white;
+    text-align: center;
+    font-size: 5.1rem;
+    font-weight: 500;
+    line-height: 59.92px;
+}
+
+.right .double-check{
+    align-self: flex-start;
+}
+
+.right .h2-bottom {
+    font-size: 4rem;
+}
+
+.right .h2-bottom .underline {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.right h2 .green {
+    color: var(--green);
+}
+
+.left {
+    width: 60%;
+    padding: 4rem;
+    color: var(--super-light-dark);
+}
+
+.left .account {
+    font-size: 1.6rem;
+}
+
+.left .top-account {
+    margin-bottom: 9rem;
+}
+
+.left .centered {
+    margin: auto;
+    padding: 3rem;
+}
+
+
+.centered h1 {
+    color: var(--dark);
+    font-size: 5rem;
+    font-weight: 500;
+    line-height: 75px;
+}
+
+.centered p {
+    color: var(--super-light-dark);
+    font-size: 18px;
+    font-weight: 400;
+    max-width: 34ch;
+    margin-bottom: 3rem;
+}
+
+form {
+    margin-bottom: 1rem;
+}
+
+form input {
+    color: var(--light-dark);
+    font-size: 1.8rem;
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+}
+
+form button {
+    color: white;
+    font-size: 1.9rem;
+    font-weight: 500;
+    width: 42rem;
+    height: 5rem;
+    background-color: var(--button-input-blue);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.centered .input {
+    margin-bottom: 2.9rem;
+    height: 5rem;
+    width: 42rem;
+    padding: 0 1rem;
+    border: 1px solid var(--light-dark);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    /* background-color: red; */
+}
+
+.cant {
+    text-align: center;
+    font-size: 1.6rem;
+}
+
+.centered p.error-message {
+    color: var(--error-color);
+    font-size: 1.5rem;
+}
