--- a/style/style.css
+++ b/style/style.css
@@ -1,159 +1,46 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-* {
-    padding: 0;
-    margin: 0;
+
+*{
     box-sizing: border-box;
 }
-
-:root {
-    --main-background: #ECEFF7;
-    --main-gradient: linear-gradient(180deg, #470EA4 0%, #3D45E2 100%);
-    --text-blue: #476ED3;
-    --button-input-blue: #1F28EB;
-    --super-light-dark: #999999;
-    --light-dark: #6F6F6F;
-    --dark: #212121;
-    --green: #00F2B8;
-    --error-color: #ff3333;
-}
-
-html {
-    font-size: 10px; /* 10px = 1rem and 16px = 1.6rem  */
-    font-family: 'Poppins', sans-serif;
-}
-
-body {
-    background-color: var(--main-background);
-    min-height: 100vh;
-    width: 100%;
+body{
+    width: 90%;
+    min-height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color:hsl(243, 57%, 50%) ;
 }
-
-.container {
-    width: 1039px;
-    height: 695px;
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    border-radius: 20px;
+h1{
+    margin-bottom: 0;
 }
-
-.right {
-    width: 40%;
-    border-radius: 0 20px 20px 0;
-    background: var(--main-gradient);
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.right h2 {
-    color: white;
-    text-align: center;
-    font-size: 5.1rem;
-    font-weight: 500;
-    line-height: 59.92px;
-}
-
-.right .double-check{
-    align-self: flex-start;
-}
-
-.right .h2-bottom {
-    font-size: 4rem;
-}
-
-.right .h2-bottom .underline {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-.right h2 .green {
-    color: var(--green);
-}
-
-.left {
-    width: 60%;
-    padding: 4rem;
-    color: var(--super-light-dark);
-}
-
-.left .account {
-    font-size: 1.6rem;
-}
-
-.left .top-account {
-    margin-bottom: 9rem;
-}
-
-.left .centered {
-    margin: auto;
-    padding: 3rem;
-}
-
-
-.centered h1 {
-    color: var(--dark);
-    font-size: 5rem;
-    font-weight: 500;
-    line-height: 75px;
-}
-
-.centered p {
-    color: var(--super-light-dark);
-    font-size: 18px;
-    font-weight: 400;
-    max-width: 34ch;
-    margin-bottom: 3rem;
-}
-
-form {
-    margin-bottom: 1rem;
-}
-
-form input {
-    color: var(--light-dark);
-    font-size: 1.8rem;
-    border: none;
-    outline: none;
-    width: 100%;
+.container{
+    width: 90%;
     height: 100%;
+    max-width: 600px;
+    max-width: 900px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color:hsl(243, 50%, 55%) ;
+    border-radius: 15px;
 }
-
-form button {
-    color: white;
-    font-size: 1.9rem;
-    font-weight: 500;
-    width: 42rem;
-    height: 5rem;
-    background-color: var(--button-input-blue);
-    border: none;
+button{
+    border: 0;
+    padding: .5em 1.5em;
+    color: hsl(243, 57%, 50%);
+    font-weight: 700;
+    background-color: hsl(64, 100%, 55%);
     border-radius: 5px;
+    transition: transform 200ms;
     cursor: pointer;
 }
+button:hover,
+button:focus{
+    background-color: hsl(243, 57%, 50%);
+    border: 1px solid hsl(64, 100%, 55%);
+    color: hsl(64, 100%, 55%);
+    transform: scale(1.1);
 
-.centered .input {
-    margin-bottom: 2.9rem;
-    height: 5rem;
-    width: 42rem;
-    padding: 0 1rem;
-    border: 1px solid var(--light-dark);
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    /* background-color: red; */
-}
-
-.cant {
-    text-align: center;
-    font-size: 1.6rem;
-}
-
-.centered p.error-message {
-    color: var(--error-color);
-    font-size: 1.5rem;
 }
